--- a/lib-docs/sass/pages/docs/ui/forms.sass
+++ b/lib-docs/sass/pages/docs/ui/forms.sass
@@ -29,3 +29,7 @@ form.form
 
 .col-twothirds.col-left-third
   +column('twothirds', 0, 'third')
+
+.switches
+  .form_group
+    margin-bottom: 0
